# MIE1075-project

./: .env  README.md  docker-compose.yml  requirements.txt
Autonomous-Explorer-and-Mapper-ros2-nav2/custom_explorer/: explorer.py  mission_commander.py
backend/: app.py  ros_bridge.py
empty_slot_detector/: README.md  detector_node.py
frontend/app/: page.tsx
frontend/app/text/: page.tsx
frontend/app/voice/: page.tsx
frontend/components/: VoiceRecorder.tsx
mie1075_supermarket_bringup/: setup.cfg
mie1075_supermarket_bringup/MIE1075-project/: .gitignore  supermarket.world
mie1075_supermarket_bringup/MIE1075-project/maps/: supermarket_map.yaml
mie1075_supermarket_bringup/launch/: auto_explore.launch.py  nav2_supermarket.launch.py
models/: model.sdf  supermarket.world
resource/db/: products.db
ros2-ws/src/my_interfaces/: package.xml
ros2-ws/src/shop_assistant_robot/: package.xml  setup.cfg  setup.py
ros2-ws/src/shop_assistant_robot/resource/db/: Datasets_position_with_direction.xlsx  test.txt
ros2-ws/src/shop_assistant_robot/script/: init_db.py
ros2-ws/src/shop_assistant_robot/shop_assistant_robot/: speech_to_text_server.py  weaviate_search_node.py
ros2-ws/src/shop_assistant_worlds/: package.xml  setup.cfg
ros2_ws/: detector_node.py
ros2_ws/src/Autonomous-Explorer-and-Mapper-ros2-nav2/: setup.py
ros2_ws/src/empty_slot_detector/: package.xml  setup.cfg  setup.py
ros2_ws/src/mie1075_supermarket_bringup/: package.xml  setup.py
ros2_ws/src/my_interfaces/: CMakeLists.txt
ros2_ws/src/my_interfaces/srv/: SpeechToText.srv
ros2_ws/src/shop_assistant_robot/: setup.py
ros2_ws/src/shop_assistant_robot/script/: init_db.py
ros2_ws/src_old/simple_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src_old/step_teleop/: package.xml  setup.cfg  setup.py
ros2_ws/src_old/supermarket_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src_old/supermarket_tb3/: package.xml  setup.cfg  setup.py
src/my_interfaces/: package.xml
src/shop_assistant_robot/: setup.py
src/shop_assistant_robot/script/: init_db.py
src/shop_assistant_worlds/: setup.py
(+27 files in other folders)
