<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shop_assistant_robot</name>
  <version>0.0.0</version>
  <description>Shop assistant robot</description>
  <maintainer email="lucia31257@gmail.com">lucia</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>my_interfaces</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>weaviate-client</exec_depend>
  <exec_depend>faster-whisper</exec_depend>
  <exec_depend>tqdm</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
